--- a/sass/lt-ie9.scss
+++ b/sass/lt-ie9.scss
@@ -10,4 +10,6 @@
  * Assuming a mobile first approach with respond.js OFF, we must reset the font
  * size for lt IE9
  */
-html {}
+html {
+  font-size: 81.3%;
+}
