--- a/css/responsive.desktop.css
+++ b/css/responsive.desktop.css
@@ -1,9 +1,1 @@
-/*
- *   Important Information about this CSS File
- *
- * - Do not delete or rename this file, if you do not use it leave it blank (delete
- *   everything) and the file will be skipped when you enable Production Mode in
- *   the Global theme settings.
- *
- * - Read the _README file in this directory, it contains useful help and other information.
- */
+#name-and-slogan{float:left;padding:0.5em 0 1em;width:100%}#main-content{margin-left:40px}#nav-wrapper .container{background:#3B3B3C;clear:both;overflow:auto;padding:5px;text-align:right;width:100%}#nav-wrapper li{float:right}#nav-wrapper a{color:#F1F1F1;font-size:0.8em;font-weight:bold;vertical-align:middle}#nav-wrapper a:hover,#nav-wrapper a:focus{color:#FFFFFF}#research-depts-nav{background:#3B3B3C;padding:5px;clear:both;overflow:auto;width:100%;text-align:right}#research-depts-nav a{color:#F1F1F1;font-size:0.8em;font-weight:bold;vertical-align:middle}#research-depts-nav a:hover,#research-depts-nav a:focus{color:#FFF}#research-depts-nav li{float:right}#research-depts-nav #current-department-link{float:left;background-color:#FFC344;padding:0 4px;-webkit-border-radius:5px;-moz-border-radius:5px;-ms-border-radius:5px;-o-border-radius:5px;border-radius:5px;color:#000;margin-top:2px}#research-link{float:left;margin-right:10px;text-transform:uppercase;margin-top:2px}#depts-links-top{margin:0;float:right}#depts-links-top a{height:100%;padding:0 4px}#depts-links-top a:hover{color:#000;background-color:#FFC344;height:100%;-webkit-border-radius:5px;-moz-border-radius:5px;-ms-border-radius:5px;-o-border-radius:5px;border-radius:5px}#depts-links-top li{display:inline;margin:0 5px;border-left:1px solid #ffc344;padding-left:10px}#depts-links-top li.first{border-left:none}.flexslider .slides img{width:440px;float:left}.flexslider ul.slides li img{padding-right:10px}
