--- a/css/responsive.tablet.landscape.css
+++ b/css/responsive.tablet.landscape.css
@@ -1,9 +1,1 @@
-/*
- *   Important Information about this CSS File
- *
- * - Do not delete or rename this file, if you do not use it leave it blank (delete 
- *   everything) and the file will be skipped when you enable Production Mode in
- *   the Global theme settings.
- *
- * - Read the _README file in this directory, it contains useful help and other information.
- */
+#name-and-slogan{float:left;margin-bottom:10px;margin-top:30px;width:100%}#main-content{margin-left:20px}#nav-wrapper .container{background:#3B3B3C;clear:both;overflow:auto;padding:5px;text-align:right;width:100%}#nav-wrapper li{float:right}#nav-wrapper a{color:#F1F1F1;font-size:0.8em;font-weight:bold;vertical-align:middle}#nav-wrapper a:hover,#nav-wrapper a:focus{color:#FFFFFF}#research-link{float:left;margin-right:10px;text-transform:uppercase;margin-top:2px}#depts-links-top{margin:0;float:right}#depts-links-top a{height:100%;padding:0 4px}#depts-links-top a:hover{color:#000;background-color:#FFC344;height:100%;-webkit-border-radius:5px;-moz-border-radius:5px;-ms-border-radius:5px;-o-border-radius:5px;border-radius:5px}#depts-links-top li{display:inline;margin:0 5px;border-left:1px solid #ffc344;padding-left:10px}#depts-links-top li.first{border-left:none}.flexslider .slides img{width:410px;float:left}.flexslider ul.slides li img{padding-right:10px}.view-id-departments_units h3{margin-top:20px}
