--- a/css/responsive.tablet.portrait.css
+++ b/css/responsive.tablet.portrait.css
@@ -1,10 +1,1 @@
-/*
- *   Important Information about this CSS File
- *
- * - Do not delete or rename this file, if you do not use it leave it blank (delete
- *   everything) and the file will be skipped when you enable Production Mode in
- *   the Global theme settings.
- *
- * - Read the _README file in this directory, it contains useful help and other information.
- */
-/* Increase the body font size on small devices */
+#name-and-slogan{float:left;margin-bottom:10px;margin-top:30px;width:100%}#nav-wrapper{display:none}.flexslider .slides img{width:400px;float:left}.flexslider ul.slides li img{padding-right:10px}
