--- a/sass/responsive.smartphone.portrait.scss
+++ b/sass/responsive.smartphone.portrait.scss
@@ -12,5 +12,14 @@
  * - Read the _README file in this directory, it contains useful help and other information.
  */
 
-/* Increase the default font size on small devices */
-html {}
+html {
+  font-size: 112.5%; /* Increase the default font size on small devices */
+}
+
+#nav-wrapper {
+  display: none;
+}
+
+.front #breadcrumb-wrapper .container {
+  display: none;
+}
