misc theme changes
changed background color of table header row, styled Site Map block for GOA 404 page, remove list images (bullet points), positioning of departmental navigation menu title, hide "printer-friendly version" link for Book pages

--- a/sass/global.base.scss
+++ b/sass/global.base.scss
@@ -546,9 +546,15 @@ td {
 }
 
 
-thead th {
-  color: #494949;
-  font-weight: 700;
+thead {
+  th {
+    color: #F1F1F1;
+    font-weight: 700;
+  }
+  
+  tr {
+	background-color: #3B3B3C !important;
+  }
 }
 
 
