--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -631,7 +631,7 @@ ul.links {
  */
 .region-sidebar-first {
 	background-color: #FFF6DC;
-	border-bottom: #FFC344;
+	border-color: #FFC344;
 	border-style:solid;
 	border-width: 6px 1px 1px;
 	
