--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -1471,7 +1471,7 @@ ul.action-links {
 
   ul,
   ol {
-	  margin: 0 0 0 15px;
+	  margin: 0 0 20px 15px;
 	  padding: 0;
   }
 
@@ -2491,6 +2491,14 @@ tr.error {
   .item-list {}
 }
 
+/*
+ * Lexicon module
+ */
+.lexicon-links {
+	background-color: transparent;
+	color: #086782;
+}
+
 /* =============================================================================
  *   Panels & Panes
  * ========================================================================== */
@@ -2569,6 +2577,11 @@ tr.error {
 	overflow: visible;	
 	position: relative !important;
 	width: auto;		
+}
+
+// Hide "printer-friendly version" link on Book pages
+ul.links li.book_printer {
+	display: none;
 }
 
 
@@ -2663,10 +2676,6 @@ tr.error {
 	}
 }
 
-// Hide "printer-friendly version" link on Book pages
-.site-name-grant-accounting-office ul.links li.book_printer {
-	display: none;
-}
 
 // Contact Page on CAM
 .site-name-capital-assets-management{
