auto size slideshow images

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2620,6 +2620,13 @@ ul.links li.book_printer {
   margin-left: 0;
 }
 
+// Slideshow images alignment on FO
+.site-name-finance-and-operations #views_slideshow_cycle_teaser_section_slideshow-block,
+.site-name-finance-and-operations #views_slideshow_cycle_teaser_section_slideshow-block img {
+	height: auto;
+	width: 100%;
+} 
+
 //Fix for header nav on GAO
 .site-name-grant-accounting-office #branding {
 	width: inherit;
