--- a/sass/responsive.tablet.landscape.scss
+++ b/sass/responsive.tablet.landscape.scss
@@ -36,9 +36,8 @@
   li {}
   
   a {
-	color: #F1F1F1;
-    font-size: 0.8em;
-    font-weight: bold;
+	color: #E0E0E0;
+    font-size: 0.9em;
     vertical-align: middle;
     
     &:hover,
