--- a/sass/responsive.tablet.portrait.scss
+++ b/sass/responsive.tablet.portrait.scss
@@ -32,3 +32,8 @@
 .flexslider ul.slides li img {
     padding-right: 10px;
 }
+
+// FO slideshow 
+.site-name-finance-and-operations .views-field-field-slideshow-image img {
+    width: 100%;
+}
