--- a/css/responsive.tablet.portrait.css
+++ b/css/responsive.tablet.portrait.css
@@ -1,1 +1,1 @@
-#name-and-slogan{float:left;margin-bottom:10px;margin-top:30px;width:100%}#nav-wrapper{display:none}.flexslider .slides img{width:400px;float:left}.flexslider ul.slides li img{padding-right:10px}
+#name-and-slogan{float:left;margin-bottom:10px;margin-top:30px;width:100%}#nav-wrapper{display:none}.flexslider .slides img{width:400px;float:left}.flexslider ul.slides li img{padding-right:10px}.site-name-finance-and-operations .views-field-field-slideshow-image img{width:100%}
