--- a/sass/responsive.tablet.landscape.scss
+++ b/sass/responsive.tablet.landscape.scss
@@ -93,3 +93,16 @@
 .view-id-departments_units h3 {
     margin-top: 20px;
 }
+
+// FO slideshow 
+.site-name-finance-and-operations .views-field-field-slideshow-image img {
+	width: 310px;
+}
+
+.site-name-finance-and-operations .view-slideshow .view-content {
+	/*position: relative;
+	right: -10px;*/
+	display: table-cell;
+	float: right;
+	margin-right: -10px;
+}
