hide book nav on CAM

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2782,3 +2782,8 @@ body.site-name-finance-and-operations {
 		}
 	}
 }
+
+//Hide Book Nav on CAM
+.site-name-capital-assets-management .book-navigation{
+	display:none;
+}
