margin-top for FAQ link on CAM

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2789,6 +2789,6 @@ body.site-name-finance-and-operations {
 }
 
 // View all FAQ link on CAM
-#block-views-faq-topic-list-block .view-footer {
+.site-name-capital-assets-management #block-views-faq-topic-list-block .view-footer {
 	margin-top: 1.5em;
 }
