Staff directory view on CAM

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2792,3 +2792,8 @@ body.site-name-finance-and-operations {
 .site-name-capital-assets-management #block-views-faq-topic-list-block .view-footer {
 	margin-top: 1.5em;
 }
+
+// Contact Us view on CAM
+.site-name-capital-assets-management .views-field-field-responsibilities ul {
+	margin-left: 40px;
+}
