un-bold field labels for GAO Announcements

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2773,6 +2773,14 @@ body.site-name-finance-and-operations {
 	}
 }
 
+// Announcments nodes on GAO
+.site-name-grant-accounting-office .node-full{
+	.field-name-field-publish-date .field-label,
+	.field-name-field-author .field-label {
+		font-weight: normal;
+	}
+} 
+
 
 // Contact Page on CAM
 .site-name-capital-assets-management{
