--- a/sass/global.base.scss
+++ b/sass/global.base.scss
@@ -1005,11 +1005,11 @@ div.flex-pauseplay {
 
 //Views read-more class
 .view p.top-read-more {
+	bottom: 42px;
+	display: block;
+	float: right;
     margin: 0;
-    position: absolute;
-    right: 10px;
-    top: 8px;
-    display: block;
+    position: relative;
     width: 4em;
 }
 
