GAO announcements block title size

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2738,6 +2738,7 @@ body.site-name-finance-and-operations {
 
 .site-name-grant-accounting-office .view-announcements h3 a {
 	color: #086782;
+	font-size: 0.93em;
 	text-decoration: none;
 	&:hover {
 		text-decoration: none;
