--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -1,6 +1,9 @@
 
 // _base.scss imports _custom.scss (variables and mixins) and other partials.
 @import "base";
+@import "compass/css3/images";
+@import "compass/css3/box-shadow";
+@import "compass/css3/border-radius";
 
 /*
  * @file
@@ -341,7 +344,9 @@ var {}
   
   .container {
 	background: #FFC822;
+  @include background-image(linear-gradient(#FFEDAC, #FFC822));
 	border: 1px solid #FFC61A;
+  @include box-shadow(rgba(200,200,200,0.25) 0px 2px 4px);
 	height: auto;
 	min-height: 18px;
   }
@@ -433,8 +438,8 @@ var {}
   float: left;
   a {
     color: #414042;
-    font-family: 'PT Sans';
-    font-weight: 700;
+    font-family: Lato;
+    font-weight: normal;
     letter-spacing: 0;
     
     &:link,
@@ -456,8 +461,10 @@ var {}
 #site-slogan {
   color: #414042;
   float: right;
+  font-style: italic;
+  font-weight: normal;
   margin-right: 0.83em;
-  margin-top: 0.6em;
+  margin-top: 0.4em;
 }
 
 
@@ -655,13 +662,18 @@ ul.links {
 .region-sidebar-first {
 	background-color: #FFF6DC;
 	border-color: #FFC344;
+  @include border-radius(6px);
 	border-style:solid;
 	border-width: 6px 1px 1px;
 	
 	.menu-name-main-menu {
+	  ul.menu {
+	    margin-top: 0;	  
+	  }
 	  
 	  li {
 		border-bottom: 1px solid #FFC344;
+		margin: 0;
 		padding: 10px;
 		position: relative;
 		
@@ -1634,6 +1646,11 @@ ul.action-links {
     margin-left: 0;
     margin-right: 20px;
   }
+}
+
+.block-menu-block li.active {
+  /*@include background-image(linear-gradient(right, rgba(255,255,255,0), #FFE68C));*/
+  @include background-image(linear-gradient(right, rgba(255,255,255,0), #FFF6DC 8%, #FFE68C));
 }
 
 /* nested menu items */
