--- a/sass/responsive.desktop.scss
+++ b/sass/responsive.desktop.scss
@@ -24,7 +24,10 @@
 
 #nav-wrapper {
   .container {
-    background: #3B3B3C;
+    background: #242424;
+    @include background-image(linear-gradient(#313131, #242424));
+    @include border-top-radius(6px);
+    @include box-shadow(rgba(200,200,200,0.25) 0px 2px 3px);
     clear: both;
     overflow: auto;
     padding: 5px;
@@ -44,6 +47,10 @@
 	  color: #FFFFFF;
     }
   }
+}
+
+#breadcrumb-wrapper .container {
+  @include border-bottom-radius(6px);
 }
 
 #research-depts-nav {
