--- a/sass/responsive.desktop.scss
+++ b/sass/responsive.desktop.scss
@@ -116,12 +116,7 @@
   }
 }
 
-// Featured content views
-.flexslider .slides img {
-    width: 440px;
-    float: left;
-}
-
-.flexslider ul.slides li img {
-    padding-right: 10px;
+// FO slideshow
+.site-name-finance-and-operations .view-slideshow {
+  margin-right: -10px;
 }
