FO slideshow adjustments for Test

--- a/sass/responsive.tablet.landscape.scss
+++ b/sass/responsive.tablet.landscape.scss
@@ -87,4 +87,8 @@
 // FO slideshow
 .site-name-finance-and-operations .view-slideshow {
   margin-right: -10px;
+
+  .flex-nav-container {
+    margin-right: -10px;
+  }
 }
