--- a/sass/responsive.desktop.scss
+++ b/sass/responsive.desktop.scss
@@ -119,4 +119,8 @@
 // FO slideshow
 .site-name-finance-and-operations .view-slideshow {
   margin-right: -10px;
+
+  .flex-nav-container {
+    margin-right: -10px;
+  }
 }
