--- a/sass/responsive.desktop.scss
+++ b/sass/responsive.desktop.scss
@@ -116,8 +116,8 @@
   }
 }
 
-// FO slideshow
-.site-name-finance-and-operations .view-slideshow {
+// Front page slideshows
+.front .view-slideshow {
   margin-right: -10px;
 
   .flex-nav-container {
