--- a/sass/responsive.tablet.landscape.scss
+++ b/sass/responsive.tablet.landscape.scss
@@ -84,8 +84,8 @@
     margin-top: 20px;
 }
 
-// FO slideshow
-.site-name-finance-and-operations .view-slideshow {
+// Front page slideshows
+.front .view-slideshow {
   margin-right: -10px;
 
   .flex-nav-container {
