--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2843,3 +2843,8 @@ body.site-name-finance-and-operations {
 .site-name-capital-assets-management .views-field-field-responsibilities ul {
 	margin-left: 40px;
 }
+
+// Remove extra margin after Responsibilities on CAM homepage
+.site-name-capital-assets-management #panels-ipe-paneid-1 ul {
+  margin-bottom: 0;
+}
