--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2778,41 +2778,34 @@ body.site-name-finance-and-operations {
 	font-style: italic;
 }
 
-// Featured Page on GAO
+// Featured Content on GAO and Book Navigation blocks
 .pane-front-page-featured-content, #block-book-navigation{
-	background-color: #D9EDF7;
-	border: 1px solid #BCE8F1;
-	border-radius: 4px;
-	h1{
-		font-size: 1.2em;
-		line-height: 1.2em;
-	}
-	.block-title{
-		text-transform: uppercase;
-		font-size: 1.4em;
-		padding: 10px 0;
-	}
+	background-color: #FCFCFC;
+	border: 1px solid #E5E5E5;
+	@include border-radius(6px, 4px);
+  @include box-shadow(rgba(0,0,0,0.25) 1px 1px 2px);
+  padding: 10px;
+
 	h2{
-		font-family: 'Trebuchet MS', sans-serif;
+    border-bottom: 1px solid #FFC344;
 		line-height: 1.2em;
-		border-bottom: none;
 		margin-bottom: 0;
-		a{
-			text-transform: capitalize;
-			text-decoration: none;
-			&:hover,
-			&:focus {
-				text-decoration: underline;
-				color: inherit;
-			}
-		}
+    position: relative;
+		
 		&:after {
-			background: none;
-		}
-	}
-	.node {
-	margin-bottom:0;
-	}
+      background: none repeat scroll 0 0 #FFC344;
+      bottom: -3px;
+      content: " ";
+      height: 6px;
+      position: absolute;
+      right: 0;
+      width: 6px;
+    }
+  }
+	
+  .views-field-title {
+    margin-top: 10px;
+  }
 }
 
 // Announcments nodes on GAO
